# oop

./: CMakeLists.txt  LICENSE
principles/: abstraction.h  composition.h  coupling.h  encapsulation.h  inheritance.h  polymorphism.h
